--- a/P1/index.html
+++ b/P1/index.html
@@ -6,48 +6,39 @@
 	<title>Ola k ase</title>
 </head>
 <body>
-		<header>
-			
-		</header>
-		<div class="body-container">
-			<aside>
-				<form>
+	<header>
+
+	</header>
+	<div class="body-container">
+		<aside>
+			<form>
 				<input type="checkbox" name="genre" value="Comedia">Comedia<br>
 				<input type="checkbox" name="genre" value="Drama">Drama<br>
-				<input type="checkbox" name="genre" value="Etc">Etc<br>
-				</form>
-			</aside>
-			<div class="scroller">
+				<input type="checkbox" name="genre" value="Etc">Etc
+			</form>
+		</aside>
+		<div class="scroller">
 			<div class="main-container">
-				
-				<p>Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-				<p>Pel 2: <br>
-				Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-
-				<p> Peli 3<br>
-				Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
 
 				<p>Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-				<p>Pel 2: <br>
-				Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<p>Pel 2: <br>	Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
 
-				<p> Peli 3<br>
-				Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<p> Peli 3<br>	Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
 
-				<p>Peli 4<br>
-				Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-				<p>Pel 5: <br>
-				Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<p>Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<p>Pel 2: <br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
 
-				<p> Peli 6<br>
-				Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<p> Peli 3<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
 
-				
-			</div>
+				<p>Peli 4<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<p>Pel 5: <br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+
+				<p> Peli 6<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
 			</div>
 		</div>
-		<footer>
-		
-		</footer>
+	</div>
+	<footer>
+
+	</footer>
 </body>
 </html>
