Añadida foto y titulo a cada peli. Falta centrar titulo, y alguna cosa más como poner botones chulos

--- a/P1/index.html
+++ b/P1/index.html
@@ -12,28 +12,64 @@
 	<div class="body-container">
 		<aside>
 			<form>
-				<input type="checkbox" name="genre" value="Comedia">Comedia<br>
-				<input type="checkbox" name="genre" value="Drama">Drama<br>
-				<input type="checkbox" name="genre" value="Etc">Etc
+				<input type="checkbox" name="genre" value="Comedia"><p class="genre">Comedia</p><br>
+				<input type="checkbox" name="genre" value="Drama"><p class="genre">Drama</p><br>
+				<input type="checkbox" name="genre" value="Etc"><p class="genre">Etc</p>
 			</form>
 		</aside>
 		<div class="scroller">
 			<div class="main-container">
 
-				<p>Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-				<p>Pel 2: <br>	Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				</div>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">Pel 2: <br>	Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				</div>
 
-				<p> Peli 3<br>	Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip"> Peli 3<br>	Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				</div>
 
-				<p>Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-				<p>Pel 2: <br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				</div>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">Pel 2: <br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p> 
+				</div>
 
-				<p> Peli 3<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip"> Peli 3<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
+				vm kldja fkl</p></div>
 
-				<p>Peli 4<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-				<p>Pel 5: <br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">Peli 4<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
+				vm kldja fkl</p></div>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">Pel 5: <br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
+					vm kldja fkl</p></div>
 
-				<p> Peli 6<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip"> Peli 6<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
+					vm kldja fkl</p></div>
 			</div>
 		</div>
 	</div>
