--- a/P1/index.html
+++ b/P1/index.html
@@ -10,12 +10,18 @@
 
 	</header>
 	<div class="body-container">
-		<aside>
-			<form>
-				<input type="checkbox" name="genre" value="Comedia"><p class="genre">Comedia</p><br>
-				<input type="checkbox" name="genre" value="Drama"><p class="genre">Drama</p><br>
-				<input type="checkbox" name="genre" value="Etc"><p class="genre">Etc</p>
-			</form>
+		<aside id="menu">
+			<ul>
+				<li> <p>Filtrar por</p><li>
+				<li> <a href="" class="filter"> Género</a></li>
+				<ul>
+					<li><a href="" class="filter-genre">Comedia <span> 12</span></a></li>
+					<li><a href="" class="filter-genre">Drama <span>20</span></a></li>
+					<li><a href="" class="filter-genre">Etc <span>1500</span></a></li>
+				</ul>
+				<li> <a href="" class="filter"> Año </a></li>
+				<li> <a href="" class="filter"> Etc </a></li>	
+			</ul>
 		</aside>
 		<div class="scroller">
 			<div class="main-container">
