Menu desplegable que se esconde

--- a/P1/index.html
+++ b/P1/index.html
@@ -13,14 +13,14 @@
 		<aside id="menu">
 			<ul>
 				<li> <p>Filtrar por</p><li>
-				<li> <a href="" class="filter"> Género</a></li>
+				<li class="filter"> <a href="" class="filter-title"> Género</a>
 				<ul>
 					<li><a href="" class="filter-genre">Comedia <span> 12</span></a></li>
 					<li><a href="" class="filter-genre">Drama <span>20</span></a></li>
 					<li><a href="" class="filter-genre">Etc <span>1500</span></a></li>
-				</ul>
-				<li> <a href="" class="filter"> Año </a></li>
-				<li> <a href="" class="filter"> Etc </a></li>	
+				</ul></li>
+				<li class="filter"> <a href="" class="filter-title"> Año </a></li>
+				<li class="filter"> <a href="" class="filter-title"> Etc </a></li>	
 			</ul>
 		</aside>
 		<div class="scroller">
