--- a/P1/index.html
+++ b/P1/index.html
@@ -12,20 +12,21 @@
 	<div class="body-container">
 		<aside id="menu">
 			<ul>
-				<li> <p>Filtrar por</p><li>
+				<li class="filter"><a href="index.html" class="filter-title">Inicio</a></li>
 				<li class="filter"> <a href="" class="filter-title"> Género</a>
-				<ul>
-					<li><a href="" class="filter-genre">Comedia <span> 12</span></a></li>
-					<li><a href="" class="filter-genre">Drama <span>20</span></a></li>
-					<li><a href="" class="filter-genre">Etc <span>1500</span></a></li>
-				</ul></li>
+					<ul>
+						<li><a href="error.html" class="filter-genre">Comedia</a></li>
+						<li><a href="error.html" class="filter-genre">Drama</a></li>
+						<li><a href="error.html" class="filter-genre">Etc</a></li>
+					</ul>
+				</li>
 				<li class="filter"> <a href="" class="filter-title"> Año </a></li>
 				<li class="filter"> <a href="" class="filter-title"> Etc </a></li>	
 			</ul>
 		</aside>
 		<div class="scroller">
+			<div class="inner-scroll">
 			<div class="main-container">
-
 				<div class="movies">
 					<img src="img/movie.jpg" id="img_01">
 					<p id="movie_01_title">Titulo</p>
@@ -76,6 +77,7 @@
 					<p id="movie_01_title">Titulo</p>
 					<p id="movie_01_descrip"> Peli 6<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
 					vm kldja fkl</p></div>
+			</div>
 			</div>
 		</div>
 	</div>
