Reorganizacion de carpetas

--- a/P1/index.html
+++ b/P1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="style/main.css">
 	<meta charset="utf-8">
 	<title>Ola k ase</title>
 </head>
@@ -14,15 +14,15 @@
 		<aside id="menu">
 			<ul>
 				<li class="filter"><a href="index.html" class="filter-title">Inicio</a></li>
-				<li class="filter"> <a href="" class="filter-title"> Género</a>
+				<li class="filter"> <p class="filter-title"> Género</p>
 					<ul>
-						<li><a href="error.html" class="filter-genre">Comedia</a></li>
-						<li><a href="error.html" class="filter-genre">Drama</a></li>
-						<li><a href="error.html" class="filter-genre">Etc</a></li>
+						<li><a href="pages/error.html" class="filter-genre">Comedia</a></li>
+						<li><a href="pages/error.html" class="filter-genre">Drama</a></li>
+						<li><a href="pages/error.html" class="filter-genre">Etc</a></li>
 					</ul>
 				</li>
-				<li class="filter"> <a href="" class="filter-title"> Año </a></li>
-				<li class="filter"> <a href="" class="filter-title"> Etc </a></li>	
+				<li class="filter"> <p class="filter-title"> Año </p></li>
+				<li class="filter"> <p class="filter-title"> Etc </p></li>	
 			</ul>
 		</aside>
 		<div class="scroller">
