Un apaño para el menú

--- a/P1/index.html
+++ b/P1/index.html
@@ -11,20 +11,20 @@
 	</header>
 
 	<div class="body-container">
-		<aside id="menu">
+		<aside class="menu">
 			<ul>
-				<li class="filter"><a href="index.html" class="filter-title">Inicio</a></li>
-				<li class="filter"> <a href="" class="filter-title"> Género</a>
-					<ul>
+				<li><a href="index.html" class="filter-title">Inicio</a></li>
+				<li class="filter"><a href="" class="filter-title">Género</a>
+					<ul class="filter-items">
 						<li><a href="error.html" class="filter-genre">Comedia</a></li>
 						<li><a href="error.html" class="filter-genre">Drama</a></li>
 						<li><a href="error.html" class="filter-genre">Etc</a></li>
 					</ul>
 				</li>
-				<li class="filter"> <a href="" class="filter-title"> Año </a></li>
-				<li class="filter"> <a href="" class="filter-title"> Etc </a></li>	
+				<li><a href="" class="filter-title">Año</a></li>
+				<li><a href="" class="filter-title">Etc</a></li>	
 			</ul>
-		</aside>
+		</aside> 
 		<div class="scroller">
 			<div class="inner-scroll">
 			<div class="main-container">
