Alineados e-mail y password

--- a/P1/login.html
+++ b/P1/login.html
@@ -12,11 +12,12 @@
 	</header>
 	<div class="body-container" id="login-body-container">
 		<form action="index.html">
-			<p id="WelcomeMsg">¡Bienvenido!</p>
-			E-mail: <input type="email" name="email" autocomplete="off"><br>
-  			Contraseña: <input type="password" name="password" autocomplete="off"><br>
-  			<input type="submit" name="Login">
-  			<a href="register.html" id="NewRegister">¿No tienes cuenta todavía?</a>
+			<p id="WelcomeMsg">Welcome!</p>
+			E-mail: <span class="whitespace_10"> </span> <input type="email" name="email" autocomplete="off"><br>
+  			Password: <input type="password" name="password" autocomplete="off"><br>
+  			<input type="submit" name="Login" value="Register" >
+
+  			<a href="register.html" id="NewRegister">Don't have account yet?</a>
 		</form>
 	</div>
 	<footer>
