Añadido al base para poder añadirle footer y header

--- a/P1/base/login.base.html
+++ b/P1/base/login.base.html
@@ -1,7 +1,10 @@
-	<div class="main-container">
+	<div class="body-container" id="login-body-container">
 		<form action="index.html">
-			E-mail: <input type="email" name="email" autocomplete="off"><br>
-  			Contraseña: <input type="password" name="password" autocomplete="off"><br>
-  			<input type="submit">
+			<p id="WelcomeMsg">Welcome!</p>
+			E-mail: <span class="whitespace_10"> </span> <input type="email" name="email" autocomplete="off"><br>
+  			Password: <input type="password" name="password" autocomplete="off"><br>
+  			<input type="submit" name="Login" value="Register">
+
+  			<a href="register.html" id="NewRegister">Don't have account yet?</a>
 		</form>
 	</div>
