--- a/P1/index.html
+++ b/P1/index.html
@@ -31,52 +31,61 @@
 				<div class="movies">
 					<img src="img/movie.jpg" id="img_01">
 					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip">Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+					<p id="movie_01_descrip">
+					orem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus doloribus deserunt harum quos! Ipsa quia, reiciendis ullam, laborum veritatis omnis magni excepturi distinctio fugit vitae itaque rem, esse veniam officia?</p>
 				</div>
 				<div class="movies">
 					<img src="img/movie.jpg" id="img_01">
 					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip">Pel 2: <br>	Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-				</div>
-
-				<div class="movies">
-					<img src="img/movie.jpg" id="img_01">
-					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip"> Peli 3<br>	Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
+					<p id="movie_01_descrip">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor est recusandae illo magni eveniet magnam repudiandae voluptate reprehenderit ullam, corporis assumenda perspiciatis, eum provident odio labore incidunt ipsum totam fugiat.</p>
 				</div>
 
 				<div class="movies">
 					<img src="img/movie.jpg" id="img_01">
 					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip">Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p>
-				</div>
-				<div class="movies">
-					<img src="img/movie.jpg" id="img_01">
-					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip">Pel 2: <br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,vm kldja fkl</p> 
+					<p id="movie_01_descrip"> 
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit veniam, voluptatibus nisi dolor error eaque expedita! Aut doloribus odio architecto, cupiditate, fuga consequatur labore quia recusandae expedita, quo quasi temporibus.</p>
 				</div>
 
 				<div class="movies">
 					<img src="img/movie.jpg" id="img_01">
 					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip"> Peli 3<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
+					<p id="movie_01_descrip">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 	Quisquam dolorem quos voluptas tempora molestias blanditiis id voluptate accusamus eveniet, cumque, eum alias quae provident officiis eligendi, necessitatibus repellat facere beatae!</p>
+				</div>
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">	
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae ab repudiandae minus quibusdam, obcaecati amet dolorum similique beatae nemo deserunt expedita hic officia eum corporis laudantium, dignissimos vero cupiditate at.</p> 
+				</div>
+
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis aperiam perferendis vero, nobis magnam praesentium ipsa, veritatis tenetur et itaque expedita quasi tempora illo enim labore assumenda voluptatem eligendi laborum.
+				</p></div>
+
+				<div class="movies">
+					<img src="img/movie.jpg" id="img_01">
+					<p id="movie_01_title">Titulo</p>
+					<p id="movie_01_descrip">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, quis perferendis aspernatur aliquam qui, rem porro similique debitis. Rerum ut enim, unde 	iusto optio, qui labore distinctio doloremque deserunt sit!
 				vm kldja fkl</p></div>
-
 				<div class="movies">
 					<img src="img/movie.jpg" id="img_01">
 					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip">Peli 4<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
-				vm kldja fkl</p></div>
-				<div class="movies">
-					<img src="img/movie.jpg" id="img_01">
-					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip">Pel 5: <br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
+					<p id="movie_01_descrip">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus expedita itaque modi iste! Vero architecto explicabo ullam. Voluptatem quas deleniti, error delectus natus saepe modi, dignissimos nesciunt quo quam cumque?
 					vm kldja fkl</p></div>
 
 				<div class="movies">
 					<img src="img/movie.jpg" id="img_01">
 					<p id="movie_01_title">Titulo</p>
-					<p id="movie_01_descrip"> Peli 6<br>		Aquí van las pelis cada una en un div loren fdagjdkas bfjkbjjfa kfd kag kkd fa kfds ak;g k;fdka;sf dkshaf kadsf jkdas jfekalnfjlrgnujr gnjldsnf la fdoa nflkera nrlgnjrla jtr utohgapo fk z.x,
+					<p id="movie_01_descrip"> 
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi voluptate iste labore, alias maxime eligendi voluptatum eaque mollitia non dignissimos quam, voluptatibus architecto repellendus beatae iure rem, dicta, accusantium consectetur.
 					vm kldja fkl</p></div>
 			</div>
 			</div>
