--- a/P1/login.html
+++ b/P1/login.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<header>
-
+		<div class="header-logo">
+			<p>Olakase</p>
+		</div>
 	</header>
 	<div class="body-container" id="login-body-container">
 		<form action="index.html">
