Opciones usuario/etc

--- a/P1/login.html
+++ b/P1/login.html
@@ -10,6 +10,14 @@
 		<div class="header-logo">
 			<p>Olakase</p>
 		</div>
+
+		<div class="header-options">
+			<ul>
+			<li><a href="">Usuario</a></li>
+			<li><a href="">Carrito</a></li>
+			<li><a href="">Salir</a></li>
+			</ul>
+		</div>
 	</header>
 	<div class="body-container" id="login-body-container">
 		<form action="index.html">
