--- a/P1/error.html
+++ b/P1/error.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	<footer>
-
+		<p class="footer-text">Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno</p>
 	</footer>
 </body>
 </html>
