--- a/P1/index.html
+++ b/P1/index.html
@@ -102,7 +102,7 @@
 		</div>
 	</div>
 	<footer>
-
+		<p class="footer-text">Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno</p>
 	</footer>
 </body>
 </html>
