--- a/P1/login.html
+++ b/P1/login.html
@@ -29,7 +29,7 @@
   			<a href="register.html" id="NewRegister">Don't have account yet?</a>
 		</form>
 	</div>	<footer>
-
+		<p class="footer-text">Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno</p>
 	</footer>
 </body>
 </html>
