Commmit para sincronizar.

--- a/P1/index.html
+++ b/P1/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="style/main.css">
-	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style/main.css" />
+	<meta charset="utf-8" />
 	<title>Ola k ase</title>
 </head>
 <body>
@@ -19,23 +18,7 @@
 			</ul>
 		</div>
 	</header>
-
-	<div class="body-container">
-		<aside class="menu">
-			<ul>
-				<li><a href="index.html" class="filter-title">Inicio</a></li>
-				<li class="filter"><a href="" class="filter-title">Género</a>
-					<ul class="filter-items">
-						<li><a href="error.html" class="filter-genre">Comedia</a></li>
-						<li><a href="error.html" class="filter-genre">Drama</a></li>
-						<li><a href="error.html" class="filter-genre">Etc</a></li>
-					</ul>
-				</li>
-				<li><a href="" class="filter-title">Año</a></li>
-				<li><a href="" class="filter-title">Etc</a></li>	
-			</ul>
-		</aside> 
-		<div class="scroller">
+<div class="scroller">
 			<div class="inner-scroll">
 			<div class="main-container">
 				<div class="movies">
@@ -100,8 +83,7 @@
 			</div>
 			</div>
 		</div>
-	</div>
-	<footer>
+	</div>	<footer>
 		<p class="footer-text">Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno</p>
 	</footer>
 </body>
