--- a/P1/login.html
+++ b/P1/login.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="style/main.css">
-	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style/main.css" />
+	<meta charset="utf-8" />
 	<title>Ola k ase</title>
 </head>
 <body>
