Un br que faltaba

--- a/Ejercicios/php-1401-GuillermoJulianMoreno-VictorDeJuanSanz/form.html
+++ b/Ejercicios/php-1401-GuillermoJulianMoreno-VictorDeJuanSanz/form.html
@@ -14,7 +14,7 @@
 			
 			<label for="sex">Sexo</label><br />
 			<input type="radio" name="sex" value="male" />Hombre<br />
-			<input type="radio" name="sex" value="female" />Mujer
+			<input type="radio" name="sex" value="female" />Mujer<br />
 
 			<input type="submit" value="Enviar" />
 		</form>
