Paginas de login y error hechas

--- a/P1/base/error.base.html
+++ b/P1/base/error.base.html
@@ -1,12 +1,13 @@
 	<div class="body-container">
 		<aside id="menu">
 			<ul>
-				<li class="filter"><a href="index.html" class="filter-title">Inicio</a></li>
+				<li class="filter"><a href="index.xml" class="filter-title">Inicio</a></li>
 			</ul>
 		</aside>
 		<div class="scroller">
-			<div class="main-container">
+		<div class="error-main-container">
 			<p id="error-page">La que has liado pollito</p>
-			</div>
+			<img src="img/error-msg.jpg" id="error-img">
+		</div>
 		</div>
 	</div>
