--- a/P1/base/login.base.html
+++ b/P1/base/login.base.html
@@ -1,10 +1,10 @@
 	<div class="body-container" id="login-body-container">
 		<form action="index.html">
-			<p id="WelcomeMsg">Welcome!</p>
+			<p id="WelcomeMsg">¡Bienvenido!</p>
 			E-mail: <span class="whitespace_10"> </span> <input type="email" name="email" autocomplete="off"><br>
-  			Password: <input type="password" name="password" autocomplete="off"><br>
+  			Contraseña: <input type="password" name="password" autocomplete="off"><br>
   			<input type="submit" name="Login" value="Register">
 
-  			<a href="register.html" id="NewRegister">Don't have account yet?</a>
+  			<a href="register.html" id="NewRegister">¿No tienes cuenta todavía?</a>
 		</form>
 	</div>
