--- a/P1/error.html
+++ b/P1/error.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style/main.css" />
+	<link rel="stylesheet" type="text/css" href="style/error.css" />
 	<meta charset="utf-8" />
 	<title>Ola k ase</title>
 </head>
@@ -21,13 +22,12 @@
 	<div class="body-container">
 		<aside id="menu">
 			<ul>
-				<li class="filter"><a href="index.html" class="filter-title">Inicio</a></li>
+				<li class="filter"><a href="index.xml" class="filter-title">Inicio</a></li>
 			</ul>
 		</aside>
-		<div class="scroller">
-			<div class="main-container">
+		<div class="error-main-container">
 			<p id="error-page">La que has liado pollito</p>
-			</div>
+			<img src="img/error-msg.jpg" id="error-img">
 		</div>
 	</div>
 	<footer>
