--- a/P1/login.html
+++ b/P1/login.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="style/main.css" />
+	<link rel="stylesheet" type="text/css" href="style/login.css" />
 	<meta charset="utf-8" />
 	<title>Ola k ase</title>
 </head>
@@ -19,14 +20,15 @@
 		</div>
 	</header>
 	<div class="body-container" id="login-body-container">
-		<form action="index.html">
-			<p id="WelcomeMsg">Welcome!</p>
+		<form action="index.xml">
+			<p id="WelcomeMsg">¡Bienvenido!</p>
 			E-mail: <span class="whitespace_10"> </span> <input type="email" name="email" autocomplete="off"><br>
-  			Password: <input type="password" name="password" autocomplete="off"><br>
+  			Contraseña: <input type="password" name="password" autocomplete="off"><br>
   			<input type="submit" name="Login" value="Register">
 
-  			<a href="register.html" id="NewRegister">Don't have account yet?</a>
+  			<a href="register.html" id="NewRegister">¿No tienes cuenta todavía?</a>
 		</form>
+	</div>
 	</div>	<footer>
 		<p class="footer-text">Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno</p>
 	</footer>
