--- a/P2/base/header.html
+++ b/P2/base/header.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style/main.css" />
+	<meta charset="utf-8" />
 	<title>Ola k ase</title>
 </head>
 <body>
 	<header>
+		<div class="header-logo">
+			<p>Olakase</p>
+		</div>
 
+		<div class="header-options">
+			<ul>
+			<li><a href="">Usuario</a></li>
+			<li><a href="">Carrito</a></li>
+			<li><a href="">Salir</a></li>
+			</ul>
+		</div>
 	</header>
