Primera implementación de películas en AngularJS

--- a/P2/base/header.html
+++ b/P2/base/header.html
@@ -1,9 +1,10 @@
-<html lang="en">
+<html lang="en" xmlns:ng="http://angularjs.org" ng-app="mainApp">
 <head>
 	<link rel="stylesheet" type="text/css" href="style/main.css" />
 	<meta charset="utf-8" />
 	<title>Ola k ase</title>
-</head>
+	<script src="lib/angular.min.js" type="text/javascript"></script>
+	<script src="js/controllers.js" type="text/javascript"></script>
 <body>
 	<header>
 		<div class="header-logo">
@@ -12,9 +13,11 @@
 
 		<div class="header-options">
 			<ul>
-			<li><a href="">Usuario</a></li>
-			<li><a href="">Carrito</a></li>
-			<li><a href="">Salir</a></li>
+				<li><a href="">Usuario</a></li>
+				<li><a href="">Carrito</a></li>
+				<li><a href="">Salir</a></li>
 			</ul>
 		</div>
 	</header>
+
+	<!-- header.html end -->
