--- a/P2/error.html
+++ b/P2/error.html
@@ -1,10 +1,10 @@
-<html lang="en">
+<html lang="en" xmlns:ng="http://angularjs.org" ng-app="mainApp">
 <head>
 	<link rel="stylesheet" type="text/css" href="style/main.css" />
-	<link rel="stylesheet" type="text/css" href="style/error.css" />
 	<meta charset="utf-8" />
 	<title>Ola k ase</title>
-</head>
+	<script src="lib/angular.min.js" type="text/javascript"></script>
+	<script src="js/controllers.js" type="text/javascript"></script>
 <body>
 	<header>
 		<div class="header-logo">
@@ -13,25 +13,34 @@
 
 		<div class="header-options">
 			<ul>
-			<li><a href="">Usuario</a></li>
-			<li><a href="">Carrito</a></li>
-			<li><a href="">Salir</a></li>
+				<li><a href="">Usuario</a></li>
+				<li><a href="">Carrito</a></li>
+				<li><a href="">Salir</a></li>
 			</ul>
 		</div>
 	</header>
+
+	<!-- header.html end -->
 	<div class="body-container">
 		<aside id="menu">
 			<ul>
 				<li class="filter"><a href="index.xml" class="filter-title">Inicio</a></li>
 			</ul>
 		</aside>
+		<div class="scroller">
 		<div class="error-main-container">
 			<p id="error-page">La que has liado pollito</p>
 			<img src="img/error-msg.jpg" id="error-img">
 		</div>
+		</div>
 	</div>
+	<!-- footer.html begin -->
+
 	<footer>
-		<p class="footer-text">Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno</p>
+		<p class="footer-text">
+			Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno
+		</p>
 	</footer>
+
 </body>
 </html>
