--- a/P2/base/footer.html
+++ b/P2/base/footer.html
@@ -1,5 +1,10 @@
+	<!-- footer.html begin -->
+
 	<footer>
-		<p class="footer-text">Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno</p>
+		<p class="footer-text">
+			Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno
+		</p>
 	</footer>
+
 </body>
 </html>
