--- a/P2/register.html
+++ b/P2/register.html
@@ -2,6 +2,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style/main.css" />
 	<link rel="stylesheet" type="text/css" href="style/login.css" />
+	<script src="javascript/external/Crypto/rollups/md5.js" type="text/javascript"></script>
+	<script src="javascript/submitLogin.js" type="text/javascript"></script>
 	<meta charset="utf-8" />
 	<title>Ola k ase</title>
 </head>
@@ -43,7 +45,7 @@
 				</tr>
 				<tr>
 					<td>
-						<td>Contraseña:</td><td> <input type="password" name="password" autocomplete="off" required>
+						<td>Contraseña:</td><td> <input type="password" name="password" autocomplete="off" required pattern="[a-zA-Z0-9]+">
 					</td>
 					<td class="defalut_hidden">
 							<td>Codigo de seguridad:</td><td> <input type="text" name="CSV" required pattern="\d\d\d"></span>
@@ -52,7 +54,6 @@
 			</table>
 			<p id=WelcomeMsg>
 				<input type="submit" name="Login" value="Registrarme">
-				<input type="button" id="NewRegister" value="¿Sin cuenta todavía?" onclick="alert('Ya si eso con más calma');">
 			</p>
 
 		</form>
