Avanzado el tema del login y registrarse y eso

--- a/P2/register.html
+++ b/P2/register.html
@@ -22,11 +22,9 @@
 		</div>
 	</header>
 	<div class="body-container" id="login-body-container">
-		<form action="register.php" method="post">
+		<form action="index.php" method="post">
 			<p id="WelcomeMsg">¡Bienvenido!</p>
        <table>
-				<!--Con javascript hacer dinámico que aparezcan más campos si quieres regstrate. De momento aparecen por defecto.
-				-->
 				<tr>
 					<td class="default_hidden">
 							<td>Nombre:</td><td> <input type="text" name="name" pattern="[a-zA-Z]+" required title="Los nombres solo tienen letras, ¿no?" >
