Comparación al revés en php y un par de cosas más!

--- a/P2/pages/error.html
+++ b/P2/pages/error.html
@@ -1,37 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="style/main.css" />
-	<link rel="stylesheet" type="text/css" href="style/error.css" />
-	<meta charset="utf-8" />
-	<title>Ola k ase</title>
+  <meta charset="UTF-8">
+  <title>Ola k ase</title>
 </head>
 <body>
-	<header>
-		<div class="header-logo">
-			<p>Olakase</p>
-		</div>
-
-		<div class="header-options">
-			<ul>
-			<li><a href="">Usuario</a></li>
-			<li><a href="">Carrito</a></li>
-			<li><a href="">Salir</a></li>
-			</ul>
-		</div>
-	</header>
-	<div class="body-container">
-		<aside id="menu">
-			<ul>
-				<li class="filter"><a href="index.xml" class="filter-title">Inicio</a></li>
-			</ul>
-		</aside>
-		<div class="error-main-container">
-			<p id="error-page">La que has liado pollito</p>
-			<img src="img/error-msg.jpg" id="error-img">
-		</div>
-	</div>
-	<footer>
-		<p class="footer-text">Olakase - Víctor de Juan Sanz - Guillermo Julián Moreno</p>
-	</footer>
+Not yet implemented.
 </body>
 </html>
