--- a/P2/login.html
+++ b/P2/login.html
@@ -4,9 +4,10 @@
 	<meta charset="utf-8" />
 	<title>Ola k ase</title>
 	<script src="lib/angular.min.js" type="text/javascript"></script>
+	<script src="lib/angular-animate.min.js" type="text/javascript"></script>
 	<script src="js/controllers.js" type="text/javascript"></script>
 <body>
-	<header>
+	<header ng-controller="headerController" ng-init="showCart = false">
 		<div class="header-logo">
 			<p>Olakase</p>
 		</div>
@@ -14,9 +15,24 @@
 		<div class="header-options">
 			<ul>
 				<li><a href="">Usuario</a></li>
-				<li><a href="">Carrito</a></li>
+				<li>
+					<a href="" ng-click="showCart = !showCart">Carrito ({{cartItems.length}})</a>
+
+				</li>
 				<li><a href="">Salir</a></li>
 			</ul>
+		</div>
+		<div class="cart-container animate-show" ng-show="showCart">
+			<div class="cart">
+				<div class="cartItem" ng-repeat="item in cartItems">
+					<img class="cartItemImage" src="{{item.image}}" />
+					<div class="cartItemPrice"><p>{{item.quantity}} x {{item.price}}€</p></div>
+					<div class="cartItemTitle"><p>{{item.title}}</p></div>
+				</div>
+			</div>
+			<div class="cartBuy">
+				<div class="button">¡Comprar!</div>
+			</div>
 		</div>
 	</header>
 
