El carrito ahora es dinámico.
Digo yo que estaría bien cambiar el cutrebotón de "añadir al carrito" que hay, pero bueno.

--- a/P2/index.html
+++ b/P2/index.html
@@ -64,6 +64,7 @@
  					<p class="movie_description">
  						{{movie.description}}
  					</p>
+ 					<a ng-click="addToCart(movie)" href="">Añadir al carrito</a>
  				</div>
  			</div>
  		</div>
