--- a/P2/base/header.html
+++ b/P2/base/header.html
@@ -7,7 +7,7 @@
 	<script src="lib/angular-animate.min.js" type="text/javascript"></script>
 	<script src="js/controllers.js" type="text/javascript"></script>
 <body>
-	<header ng-controller="headerController" ng-init="showCart = false">
+	<header ng-controller="headerController" ng-init="showCart = true">
 		<div class="header-logo">
 			<p>Olakase</p>
 		</div>
@@ -25,6 +25,7 @@
 		<div class="cart-container animate-show" ng-show="showCart">
 			<div class="cart">
 				<div class="cartItem" ng-repeat="item in cartItems">
+					<a href="javascript:void()" ng-click="removeFromCart(item)" class="deleteButton"><img src="img/close.svg"></a>
 					<img class="cartItemImage" src="{{item.image}}" />
 					<div class="cartItemPrice"><p>{{item.quantity}} x {{item.price}}€</p></div>
 					<div class="cartItemTitle"><p>{{item.title}}</p></div>
