--- a/P2/error.html
+++ b/P2/error.html
@@ -7,7 +7,7 @@
 	<script src="lib/angular-animate.min.js" type="text/javascript"></script>
 	<script src="js/controllers.js" type="text/javascript"></script>
 <body>
-	<header ng-controller="headerController" ng-init="showCart = true">
+	<header ng-controller="headerController" ng-init="showCart = false">
 		<div class="header-logo">
 			<p>Olakase</p>
 		</div>
