Las películas ya cargan de XML

--- a/P2/index.html
+++ b/P2/index.html
@@ -25,7 +25,7 @@
 		<div class="cart-container animate-show" ng-show="showCart">
 			<div class="cart">
 				<div class="cartItem" ng-repeat="item in cartItems">
-					<a href="" ng-click="removeFromCart(item)" class="deleteButton"><img src="img/close.svg"></a>
+					<a href="javascript:void()" ng-click="removeFromCart(item)" class="deleteButton"><img ng-src="img/close.svg"></a>
 					<img class="cartItemImage" src="{{item.image}}" />
 					<div class="cartItemPrice"><p>{{item.quantity}} x {{item.price}}€</p></div>
 					<div class="cartItemTitle"><p>{{item.title}}</p></div>
@@ -59,8 +59,8 @@
  		<div class="inner-scroll">
  			<div class="main-container" 
  				ng-controller="movieListController">
- 				<div class="movies" ng-repeat="movie in movies">
- 					<img src="{{movie.image}}" class="movie_img">
+ 				<div class="movies" ng-repeat="movie in movies track by $index">
+ 					<img src="{{movie.image}}" class="movie_img" />
  					<p class="movie_title">{{movie.title}}</p>
  					<p class="movie_description">
  						{{movie.description}}
