--- a/P2/base/index.base.html
+++ b/P2/base/index.base.html
@@ -19,8 +19,8 @@
  		<div class="inner-scroll">
  			<div class="main-container" 
  				ng-controller="movieListController">
- 				<div class="movies" ng-repeat="movie in movies">
- 					<img ng-src="{{movie.image}}" class="movie_img">
+ 				<div class="movies" ng-repeat="movie in movies track by $index">
+ 					<img src="{{movie.image}}" class="movie_img">
  					<p class="movie_title">{{movie.title}}</p>
  					<p class="movie_description">
  						{{movie.description}}
