Hecho el html del login superpuesto. Vamos a por el javascript para que sea útil

--- a/P2/register.html
+++ b/P2/register.html
@@ -22,7 +22,7 @@
 		</div>
 	</header>
 	<div class="body-container" id="login-body-container">
-		<form action="php/login_register.php" method="post">
+		<form action="/php/login_register.php" method="post">
 			<p id="WelcomeMsg">¡Bienvenido!</p>
        <table>
 				<tr>
